# live-point

./: .gitignore  CLAUDE.md  LICENSE  Makefile
backend/: .env.example  llm_service.py  main.py  pyproject.toml  requirements.txt  simul_whisper_service.py  websocket_handler.py  whisper_service.py
docs/: PROGRESS.md  live-point.md
docs/plans/: 2026-01-23-live-point-design.md  2026-01-23-live-point-implementation.md  2026-01-24-coreml-encoder-optimization.md  2026-01-24-lightning-simulwhisper-integration.md  2026-01-26-game-button-separation.md  2026-01-27-meeting-roguelike-brainstorm.md  2026-01-27-meeting-roguelike-design.md  2026-01-27-meeting-roguelike-implementation.md  progress-lightning-simulwhisper.md  progress-whisper-streaming-comparison.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  db.ts  index.css  types.ts
frontend/src/components/: HistoryPanel.tsx  PointPanel.tsx  RecordButton.tsx  SessionNameModal.tsx  TranscriptFlow.tsx
frontend/src/components/ads/: AdSense.tsx  FooterAd.tsx  HeaderAd.tsx  index.ts
frontend/src/components/game/: GameCanvas.tsx  GameConsentModal.tsx  GameEndModal.tsx  GameStartButton.tsx  PowerGauge.tsx  (+3 more)
frontend/src/data/: cards.ts  enemies.ts  maps.ts  seatLayouts.ts
frontend/src/hooks/: useAudioCapture.ts  useDraggable.ts  useSilenceDetection.ts  useWebSocket.ts
frontend/src/stores/: gameStore.ts  roguelikeStore.ts  sessionStore.ts
frontend/src/types/: game.ts  roguelike.ts
frontend/src/utils/: gameConstants.ts  gamePhysics.ts  roguelikeCombat.ts  roguelikeDeck.ts  roguelikeMap.ts
(+20 files in other folders)
